helm-carvel/config/04-ingress.ytt.yml
#@ load("@ytt:data", "data")

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: #@ data.values.name
  labels:
    app.kubernetes.io/name: #@ data.values.name
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: #@ data.values.name
            port:
              number: 8080
    host: #@ data.values.ingress.host
